# dota-predictor

./: .cursorrules  .env.example  .gitignore  LICENSE  Makefile  README.md  gamestate_integration_predictor.cfg  pyproject.toml  requirements.txt
data/examples/: match_example.json  matches_summary.csv
docs/: data_pipeline.md  features.md  polymarket_integration.md
models/checkpoints/: calibrator_config.json  calibrator_early.json  calibrator_late.json  calibrator_mid.json  model.pt
notebooks/: data_exploration.ipynb
scripts/: calibrate_per_minute.py  evaluate.py  fetch_data.py  find_games.py  gsi_diagnostic.py  inspect_data.py  live_predict.py  predict_match.py  process_data.py  spectate.py  train.py
src/dota_predictor/: __init__.py
src/dota_predictor/api/: __init__.py  opendota.py
src/dota_predictor/data/: __init__.py  database.py  dataset.py  heroes.py  match.py
src/dota_predictor/evaluation/: __init__.py  calibration.py  metrics.py  tracker.py
src/dota_predictor/features/: __init__.py  extractor.py
src/dota_predictor/inference/: __init__.py  gsi_server.py  predictor.py
src/dota_predictor/models/: __init__.py  baseline.py  loader.py  lstm.py
src/dota_predictor/polymarket/: __init__.py  match_linker.py  polymarket.py
src/dota_predictor/utils/: __init__.py  config.py  training.py
tests/: __init__.py  test_data_models.py
